// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonBlock matches snapshot for citizen with entitlement 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-alignItems-1oszu61 r-flexDirection-eqz5dr r-justifyContent-1wtj0ep"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy"
      style={
        Object {
          "WebkitTransform": "scale(1)",
          "height": "196px",
          "transform": "scale(1)",
          "width": "196px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n r-flex-13awgt0 r-left-1d2f490 r-top-ipm5af"
        style={
          Object {
            "WebkitTransform": "perspective(0px) rotateX(0deg)",
            "bottom": "0px",
            "opacity": 100,
            "position": "absolute",
            "right": "0px",
            "transform": "perspective(0px) rotateX(0deg)",
            "zIndex": 0,
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-height-1wztat5 r-justifyContent-1777fci"
          style={
            Object {
              "backgroundColor": "rgba(248,175,64,1.00)",
              "borderBottomColor": "rgba(255,255,255,1.00)",
              "borderBottomLeftRadius": "70px",
              "borderBottomRightRadius": "70px",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "3px",
              "borderLeftColor": "rgba(255,255,255,1.00)",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "3px",
              "borderRightColor": "rgba(255,255,255,1.00)",
              "borderRightStyle": "solid",
              "borderRightWidth": "3px",
              "borderTopColor": "rgba(255,255,255,1.00)",
              "borderTopLeftRadius": "70px",
              "borderTopRightRadius": "70px",
              "borderTopStyle": "solid",
              "borderTopWidth": "3px",
              "boxShadow": "10px 12px 25px -14px, 0px 0.75px 1.5px rgba(0,0,0,0.24)",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "0px",
              "marginTop": "0px",
              "minHeight": "44px",
              "minWidth": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "width": "140px",
            }
          }
        >
          <div
            className="css-cursor-18t94o4 css-view-1dbjc4n r-cursor-1loqt21 r-flex-13awgt0 r-overflow-1udh08x r-position-bnwqim r-touchAction-1otgn73"
            data-focusable={true}
            disabled={false}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="button"
            style={
              Object {
                "WebkitAlignSelf": "stretch",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": "70px",
                "borderBottomRightRadius": "70px",
                "borderTopLeftRadius": "70px",
                "borderTopRightRadius": "70px",
                "msFlexItemAlign": "stretch",
              }
            }
            tabIndex="0"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz r-justifyContent-1777fci"
              style={
                Object {
                  "WebkitAlignSelf": "stretch",
                  "alignSelf": "stretch",
                  "msFlexItemAlign": "stretch",
                }
              }
            >
              <div
                className="css-view-1dbjc4n r-marginHorizontal-1ybube5 r-marginVertical-712mwr"
              >
                <div
                  className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flex-13awgt0 r-flexDirection-18u37iz"
                >
                  <div
                    className="css-view-1dbjc4n r-flexDirection-eqz5dr r-height-1wztat5"
                  >
                    <div
                      className="css-view-1dbjc4n r-left-1d2f490 r-marginBottom-15d164r r-marginTop-1x0uki6 r-position-bnwqim r-top-ipm5af"
                    >
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-vnw8o6 r-fontSize-1b43r93 r-fontWeight-b88u0q r-letterSpacing-i0j7gm r-lineHeight-hbpseb r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                        dir="auto"
                      >
                        Your next
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-vnw8o6 r-fontSize-1b43r93 r-fontWeight-b88u0q r-letterSpacing-i0j7gm r-lineHeight-hbpseb r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                        dir="auto"
                      >
                        daily claim:
                      </div>
                    </div>
                    <div
                      className="css-view-1dbjc4n r-alignItems-mbwzsl r-flexDirection-18u37iz r-justifyContent-1777fci r-minHeight-ifefl9"
                      style={
                        Object {
                          "WebkitBoxFlex": 1,
                          "WebkitFlexGrow": 1,
                          "flexGrow": 1,
                          "msFlexPositive": 1,
                        }
                      }
                    >
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1jg9483"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        1
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1jg9483"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-flex-13awgt0 r-left-1d2f490 r-top-ipm5af"
        style={
          Object {
            "WebkitTransform": "perspective(0px) rotateX(-180deg)",
            "bottom": "0px",
            "opacity": 0,
            "position": "absolute",
            "right": "0px",
            "transform": "perspective(0px) rotateX(-180deg)",
            "zIndex": 1,
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-height-1wztat5 r-justifyContent-1777fci"
          style={
            Object {
              "backgroundColor": "rgba(0,175,255,1.00)",
              "borderBottomColor": "rgba(255,255,255,1.00)",
              "borderBottomLeftRadius": "70px",
              "borderBottomRightRadius": "70px",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "3px",
              "borderLeftColor": "rgba(255,255,255,1.00)",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "3px",
              "borderRightColor": "rgba(255,255,255,1.00)",
              "borderRightStyle": "solid",
              "borderRightWidth": "3px",
              "borderTopColor": "rgba(255,255,255,1.00)",
              "borderTopLeftRadius": "70px",
              "borderTopRightRadius": "70px",
              "borderTopStyle": "solid",
              "borderTopWidth": "3px",
              "boxShadow": "10px 12px 25px -14px, 0px 0.75px 1.5px rgba(0,0,0,0.24)",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "0px",
              "marginTop": "0px",
              "minHeight": "44px",
              "minWidth": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "width": "140px",
            }
          }
        >
          <div
            className="css-cursor-18t94o4 css-view-1dbjc4n r-cursor-1loqt21 r-flex-13awgt0 r-overflow-1udh08x r-position-bnwqim r-touchAction-1otgn73"
            data-focusable={true}
            disabled={false}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="button"
            style={
              Object {
                "WebkitAlignSelf": "stretch",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": "70px",
                "borderBottomRightRadius": "70px",
                "borderTopLeftRadius": "70px",
                "borderTopRightRadius": "70px",
                "msFlexItemAlign": "stretch",
              }
            }
            tabIndex="0"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz r-justifyContent-1777fci"
              style={
                Object {
                  "WebkitAlignSelf": "stretch",
                  "alignSelf": "stretch",
                  "msFlexItemAlign": "stretch",
                }
              }
            >
              <div
                className="css-view-1dbjc4n r-marginHorizontal-1ybube5 r-marginVertical-712mwr"
              >
                <div
                  className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flex-13awgt0 r-flexDirection-18u37iz"
                >
                  <div
                    className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-justifyContent-1777fci"
                  >
                    <div
                      className="css-text-901oao r-color-waoq6i r-fontFamily-vnw8o6 r-fontSize-ubezar r-fontWeight-majxgm r-lineHeight-hbpseb r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                      dir="auto"
                    >
                      Get your 
                    </div>
                    <div
                      className="css-text-901oao r-color-waoq6i r-fontFamily-vnw8o6 r-fontSize-ubezar r-fontWeight-majxgm r-lineHeight-hbpseb r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                      dir="auto"
                    >
                       free daily share:
                    </div>
                    <div
                      className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-18u37iz"
                    >
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-vnw8o6 r-fontSize-3i2nvb r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-marginRight-a5pmau r-textAlign-1ff274t r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                        dir="auto"
                      >
                        1
                      </div>
                      <div
                        className="css-view-1dbjc4n r-alignItems-1awozwy r-flexDirection-18u37iz r-justifyContent-1wtj0ep"
                      >
                        <div
                          className="css-text-901oao r-color-jwli3a r-fontFamily-vnw8o6 r-fontSize-ubezar r-fontWeight-majxgm r-lineHeight-rjixqe r-textAlign-1ff274t r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                          dir="auto"
                        >
                          G
                        </div>
                        <div
                          className="css-text-901oao r-color-jwli3a r-fontFamily-vnw8o6 r-fontSize-1asdmkh r-fontWeight-majxgm r-lineHeight-rjixqe r-textAlign-1ff274t r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                          dir="auto"
                        >
                          $
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ButtonBlock matches snapshot for citizen without entitlement 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-alignItems-1oszu61 r-flexDirection-eqz5dr r-justifyContent-1wtj0ep"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy"
      style={
        Object {
          "WebkitTransform": "scale(1)",
          "height": "196px",
          "transform": "scale(1)",
          "width": "196px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n r-flex-13awgt0 r-left-1d2f490 r-top-ipm5af"
        style={
          Object {
            "WebkitTransform": "perspective(0px) rotateY(0deg)",
            "bottom": "0px",
            "opacity": 100,
            "position": "absolute",
            "right": "0px",
            "transform": "perspective(0px) rotateY(0deg)",
            "zIndex": 1,
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-height-1wztat5 r-justifyContent-1777fci"
          style={
            Object {
              "backgroundColor": "rgba(248,175,64,1.00)",
              "borderBottomColor": "rgba(255,255,255,1.00)",
              "borderBottomLeftRadius": "70px",
              "borderBottomRightRadius": "70px",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "3px",
              "borderLeftColor": "rgba(255,255,255,1.00)",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "3px",
              "borderRightColor": "rgba(255,255,255,1.00)",
              "borderRightStyle": "solid",
              "borderRightWidth": "3px",
              "borderTopColor": "rgba(255,255,255,1.00)",
              "borderTopLeftRadius": "70px",
              "borderTopRightRadius": "70px",
              "borderTopStyle": "solid",
              "borderTopWidth": "3px",
              "boxShadow": "10px 12px 25px -14px, 0px 0.75px 1.5px rgba(0,0,0,0.24)",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "0px",
              "marginTop": "0px",
              "minHeight": "44px",
              "minWidth": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "width": "140px",
            }
          }
        >
          <div
            className="css-cursor-18t94o4 css-view-1dbjc4n r-cursor-1loqt21 r-flex-13awgt0 r-overflow-1udh08x r-position-bnwqim r-touchAction-1otgn73"
            data-focusable={true}
            disabled={false}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="button"
            style={
              Object {
                "WebkitAlignSelf": "stretch",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": "70px",
                "borderBottomRightRadius": "70px",
                "borderTopLeftRadius": "70px",
                "borderTopRightRadius": "70px",
                "msFlexItemAlign": "stretch",
              }
            }
            tabIndex="0"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz r-justifyContent-1777fci"
              style={
                Object {
                  "WebkitAlignSelf": "stretch",
                  "alignSelf": "stretch",
                  "msFlexItemAlign": "stretch",
                }
              }
            >
              <div
                className="css-view-1dbjc4n r-marginHorizontal-1ybube5 r-marginVertical-712mwr"
              >
                <div
                  className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flex-13awgt0 r-flexDirection-18u37iz"
                >
                  <div
                    className="css-view-1dbjc4n r-flexDirection-eqz5dr r-height-1wztat5"
                  >
                    <div
                      className="css-view-1dbjc4n r-left-1d2f490 r-marginBottom-15d164r r-marginTop-1x0uki6 r-position-bnwqim r-top-ipm5af"
                    >
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-vnw8o6 r-fontSize-1b43r93 r-fontWeight-b88u0q r-letterSpacing-i0j7gm r-lineHeight-hbpseb r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                        dir="auto"
                      >
                        Your next
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-vnw8o6 r-fontSize-1b43r93 r-fontWeight-b88u0q r-letterSpacing-i0j7gm r-lineHeight-hbpseb r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                        dir="auto"
                      >
                        daily claim:
                      </div>
                    </div>
                    <div
                      className="css-view-1dbjc4n r-alignItems-mbwzsl r-flexDirection-18u37iz r-justifyContent-1777fci r-minHeight-ifefl9"
                      style={
                        Object {
                          "WebkitBoxFlex": 1,
                          "WebkitFlexGrow": 1,
                          "flexGrow": 1,
                          "msFlexPositive": 1,
                        }
                      }
                    >
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1jg9483"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        1
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1jg9483"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-flex-13awgt0 r-left-1d2f490 r-top-ipm5af"
        style={
          Object {
            "WebkitTransform": "perspective(0px) rotateY(-180deg)",
            "bottom": "0px",
            "opacity": 0,
            "position": "absolute",
            "right": "0px",
            "transform": "perspective(0px) rotateY(-180deg)",
            "zIndex": 0,
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flexDirection-eqz5dr r-height-1wztat5 r-justifyContent-1777fci"
          style={
            Object {
              "backgroundColor": "rgba(248,175,64,1.00)",
              "borderBottomColor": "rgba(255,255,255,1.00)",
              "borderBottomLeftRadius": "70px",
              "borderBottomRightRadius": "70px",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "3px",
              "borderLeftColor": "rgba(255,255,255,1.00)",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "3px",
              "borderRightColor": "rgba(255,255,255,1.00)",
              "borderRightStyle": "solid",
              "borderRightWidth": "3px",
              "borderTopColor": "rgba(255,255,255,1.00)",
              "borderTopLeftRadius": "70px",
              "borderTopRightRadius": "70px",
              "borderTopStyle": "solid",
              "borderTopWidth": "3px",
              "boxShadow": "10px 12px 25px -14px, 0px 0.75px 1.5px rgba(0,0,0,0.24)",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "0px",
              "marginTop": "0px",
              "minHeight": "44px",
              "minWidth": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "width": "140px",
            }
          }
        >
          <div
            className="css-cursor-18t94o4 css-view-1dbjc4n r-cursor-1loqt21 r-flex-13awgt0 r-overflow-1udh08x r-position-bnwqim r-touchAction-1otgn73"
            data-focusable={true}
            disabled={false}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="button"
            style={
              Object {
                "WebkitAlignSelf": "stretch",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": "70px",
                "borderBottomRightRadius": "70px",
                "borderTopLeftRadius": "70px",
                "borderTopRightRadius": "70px",
                "msFlexItemAlign": "stretch",
              }
            }
            tabIndex="0"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz r-justifyContent-1777fci"
              style={
                Object {
                  "WebkitAlignSelf": "stretch",
                  "alignSelf": "stretch",
                  "msFlexItemAlign": "stretch",
                }
              }
            >
              <div
                className="css-view-1dbjc4n r-marginHorizontal-1ybube5 r-marginVertical-712mwr"
              >
                <div
                  className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flex-13awgt0 r-flexDirection-18u37iz"
                >
                  <div
                    className="css-view-1dbjc4n r-flexDirection-eqz5dr r-height-1wztat5"
                  >
                    <div
                      className="css-view-1dbjc4n r-left-1d2f490 r-marginBottom-15d164r r-marginTop-1x0uki6 r-position-bnwqim r-top-ipm5af"
                    >
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-vnw8o6 r-fontSize-1b43r93 r-fontWeight-b88u0q r-letterSpacing-i0j7gm r-lineHeight-hbpseb r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                        dir="auto"
                      >
                        Your next
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-vnw8o6 r-fontSize-1b43r93 r-fontWeight-b88u0q r-letterSpacing-i0j7gm r-lineHeight-hbpseb r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                        dir="auto"
                      >
                        daily claim:
                      </div>
                    </div>
                    <div
                      className="css-view-1dbjc4n r-alignItems-mbwzsl r-flexDirection-18u37iz r-justifyContent-1777fci r-minHeight-ifefl9"
                      style={
                        Object {
                          "WebkitBoxFlex": 1,
                          "WebkitFlexGrow": 1,
                          "flexGrow": 1,
                          "msFlexPositive": 1,
                        }
                      }
                    >
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1jg9483"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        1
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1jg9483"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ButtonBlock renders without errors and matches snapshot for non-citizen 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n r-alignItems-1oszu61 r-flexDirection-eqz5dr r-justifyContent-1wtj0ep"
  >
    <div
      className="css-view-1dbjc4n r-alignItems-1awozwy"
      style={
        Object {
          "WebkitTransform": "scale(1)",
          "height": "196px",
          "transform": "scale(1)",
          "width": "196px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n r-flex-13awgt0 r-left-1d2f490 r-top-ipm5af"
        style={
          Object {
            "WebkitTransform": "perspective(0px) rotateY(0deg)",
            "bottom": "0px",
            "opacity": 100,
            "position": "absolute",
            "right": "0px",
            "transform": "perspective(0px) rotateY(0deg)",
            "zIndex": 1,
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-flexDirection-eqz5dr"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxPack": "center",
              "WebkitJustifyContent": "center",
              "alignItems": "center",
              "backgroundColor": "rgba(248,175,64,1.00)",
              "borderBottomColor": "rgba(255,255,255,1.00)",
              "borderBottomLeftRadius": "70px",
              "borderBottomRightRadius": "70px",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "3px",
              "borderLeftColor": "rgba(255,255,255,1.00)",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "3px",
              "borderRightColor": "rgba(255,255,255,1.00)",
              "borderRightStyle": "solid",
              "borderRightWidth": "3px",
              "borderTopColor": "rgba(255,255,255,1.00)",
              "borderTopLeftRadius": "70px",
              "borderTopRightRadius": "70px",
              "borderTopStyle": "solid",
              "borderTopWidth": "3px",
              "boxShadow": "10px 12px 25px -14px, 0px 0.75px 1.5px rgba(0,0,0,0.24)",
              "display": "flex",
              "height": "140px",
              "justifyContent": "center",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "0px",
              "marginTop": "0px",
              "minHeight": "44px",
              "minWidth": "auto",
              "msFlexAlign": "center",
              "msFlexPack": "center",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "width": "140px",
            }
          }
        >
          <div
            className="css-cursor-18t94o4 css-view-1dbjc4n r-cursor-1loqt21 r-flex-13awgt0 r-overflow-1udh08x r-position-bnwqim r-touchAction-1otgn73"
            data-focusable={true}
            disabled={false}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="button"
            style={
              Object {
                "WebkitAlignSelf": "stretch",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": "70px",
                "borderBottomRightRadius": "70px",
                "borderTopLeftRadius": "70px",
                "borderTopRightRadius": "70px",
                "msFlexItemAlign": "stretch",
              }
            }
            tabIndex="0"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz r-justifyContent-1777fci"
              style={
                Object {
                  "WebkitAlignSelf": "stretch",
                  "alignSelf": "stretch",
                  "msFlexItemAlign": "stretch",
                }
              }
            >
              <div
                className="css-view-1dbjc4n r-marginHorizontal-1ybube5 r-marginVertical-712mwr"
              >
                <div
                  className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flex-13awgt0 r-flexDirection-18u37iz"
                >
                  <div
                    className="css-view-1dbjc4n r-flexDirection-eqz5dr r-height-1wztat5"
                  >
                    <div
                      className="css-view-1dbjc4n r-left-1d2f490 r-marginBottom-15d164r r-marginTop-1x0uki6 r-position-bnwqim r-top-ipm5af"
                    >
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-vnw8o6 r-fontSize-1b43r93 r-fontWeight-b88u0q r-letterSpacing-i0j7gm r-lineHeight-hbpseb r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                        dir="auto"
                      >
                        Your next
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-vnw8o6 r-fontSize-1b43r93 r-fontWeight-b88u0q r-letterSpacing-i0j7gm r-lineHeight-hbpseb r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                        dir="auto"
                      >
                        daily claim:
                      </div>
                    </div>
                    <div
                      className="css-view-1dbjc4n r-alignItems-mbwzsl r-flexDirection-18u37iz r-justifyContent-1777fci r-minHeight-ifefl9"
                      style={
                        Object {
                          "WebkitBoxFlex": 1,
                          "WebkitFlexGrow": 1,
                          "flexGrow": 1,
                          "msFlexPositive": 1,
                        }
                      }
                    >
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1jg9483"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        1
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1jg9483"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n r-flex-13awgt0 r-left-1d2f490 r-top-ipm5af"
        style={
          Object {
            "WebkitTransform": "perspective(0px) rotateY(-180deg)",
            "bottom": "0px",
            "opacity": 0,
            "position": "absolute",
            "right": "0px",
            "transform": "perspective(0px) rotateY(-180deg)",
            "zIndex": 0,
          }
        }
      >
        <div
          className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-height-1wztat5 r-justifyContent-1777fci"
          style={
            Object {
              "backgroundColor": "rgba(0,175,255,1.00)",
              "borderBottomColor": "rgba(255,255,255,1.00)",
              "borderBottomLeftRadius": "70px",
              "borderBottomRightRadius": "70px",
              "borderBottomStyle": "solid",
              "borderBottomWidth": "3px",
              "borderLeftColor": "rgba(255,255,255,1.00)",
              "borderLeftStyle": "solid",
              "borderLeftWidth": "3px",
              "borderRightColor": "rgba(255,255,255,1.00)",
              "borderRightStyle": "solid",
              "borderRightWidth": "3px",
              "borderTopColor": "rgba(255,255,255,1.00)",
              "borderTopLeftRadius": "70px",
              "borderTopRightRadius": "70px",
              "borderTopStyle": "solid",
              "borderTopWidth": "3px",
              "boxShadow": "10px 12px 25px -14px, 0px 0.75px 1.5px rgba(0,0,0,0.24)",
              "marginBottom": "0px",
              "marginLeft": "0px",
              "marginRight": "0px",
              "marginTop": "0px",
              "minHeight": "44px",
              "minWidth": "auto",
              "paddingBottom": "0px",
              "paddingLeft": "0px",
              "paddingRight": "0px",
              "paddingTop": "0px",
              "width": "140px",
            }
          }
        >
          <div
            className="css-cursor-18t94o4 css-view-1dbjc4n r-cursor-1loqt21 r-flex-13awgt0 r-overflow-1udh08x r-position-bnwqim r-touchAction-1otgn73"
            data-focusable={true}
            disabled={false}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="button"
            style={
              Object {
                "WebkitAlignSelf": "stretch",
                "alignSelf": "stretch",
                "borderBottomLeftRadius": "70px",
                "borderBottomRightRadius": "70px",
                "borderTopLeftRadius": "70px",
                "borderTopRightRadius": "70px",
                "msFlexItemAlign": "stretch",
              }
            }
            tabIndex="0"
          >
            <div
              className="css-view-1dbjc4n r-alignItems-1awozwy r-flex-13awgt0 r-flexDirection-18u37iz r-justifyContent-1777fci"
              style={
                Object {
                  "WebkitAlignSelf": "stretch",
                  "alignSelf": "stretch",
                  "msFlexItemAlign": "stretch",
                }
              }
            >
              <div
                className="css-view-1dbjc4n r-marginHorizontal-1ybube5 r-marginVertical-712mwr"
              >
                <div
                  className="css-view-1dbjc4n r-alignItems-1awozwy r-display-6koalj r-flex-13awgt0 r-flexDirection-18u37iz"
                >
                  <div
                    className="css-view-1dbjc4n r-flexDirection-eqz5dr r-height-1wztat5"
                  >
                    <div
                      className="css-view-1dbjc4n r-left-1d2f490 r-marginBottom-15d164r r-marginTop-1x0uki6 r-position-bnwqim r-top-ipm5af"
                    >
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-vnw8o6 r-fontSize-1b43r93 r-fontWeight-b88u0q r-letterSpacing-i0j7gm r-lineHeight-hbpseb r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                        dir="auto"
                      >
                        Your next
                      </div>
                      <div
                        className="css-text-901oao r-color-cddv6f r-fontFamily-vnw8o6 r-fontSize-1b43r93 r-fontWeight-b88u0q r-letterSpacing-i0j7gm r-lineHeight-hbpseb r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y"
                        dir="auto"
                      >
                        daily claim:
                      </div>
                    </div>
                    <div
                      className="css-view-1dbjc4n r-alignItems-mbwzsl r-flexDirection-18u37iz r-justifyContent-1777fci r-minHeight-ifefl9"
                      style={
                        Object {
                          "WebkitBoxFlex": 1,
                          "WebkitFlexGrow": 1,
                          "flexGrow": 1,
                          "msFlexPositive": 1,
                        }
                      }
                    >
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1jg9483"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        1
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-1jg9483"
                        dir="auto"
                      >
                        :
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                      <div
                        className="css-text-901oao r-color-jwli3a r-fontFamily-6jnb14 r-fontSize-1ra0lkn r-fontWeight-b88u0q r-lineHeight-ueyrd6 r-textAlign-q4m81j r-textDecorationLine-13wfysu r-textTransform-3twk1y r-width-12ym1je"
                        dir="auto"
                      >
                        0
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
